# actix-web-template

./: Cargo.toml  README.md
src/: app.rs  hello.rs  main.rs  user.rs
