[package]
name = "actix-web-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# web framework
actix-web = "4.4.0"

# handles cors request
actix-cors = "0.6.4"

# timezone
chrono = { version = "0.4.31", features = ["serde"] }

# handles json serialize and deserialze
serde = { version = "1.0.193", features = ["derive"] }

# log
env_logger = "0.10.1"
log = "0.4.20"

